# Project_Coxwave

./: Chatbot.ipynb  FAQ_chatbot.ipynb  README.md  ads.py  chatbot.ipynb  chatbot_submit.py  embedding_submit.py  pyproject.toml
COXWAVE_knowledge_graph_recommendation/: KG_util.py  neo4j.ipynb
Chatbot/: application.py  characters.py  chatbot_params.yaml  embedding.py  input_command_checker.py
chatbot/: Naver_FAQ_Chatbot.py  pyproject.toml  requirements.txt
chatbot_project/: pyproject.toml
chatbot_project/chatbot/: create_db.py  run_chatbot.py
week1_homework/: pyproject.toml
week1_homework/main/: FAQ_chatbot.py
