[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Doyoung <cathy2653@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
chromadb = "^0.4.24"
openai = "^1.23.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
